<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.task_2.MainActivity">


    <EditText
        android:id="@+id/edit_text_display"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/background_display"
        />
    <Button
        android:id="@+id/btn_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_seven"
        android:layout_below="@id/edit_text_display"
        android:layout_margin="2dp"
        android:background="@drawable/background_values"
        />

    <Button
        android:id="@+id/btn_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/btn_seven"
        android:layout_below="@id/edit_text_display"
        android:text="@string/btn_txt_eight"
        android:layout_margin="2dp"
        android:background="@drawable/background_values"
        />

    <Button
        android:id="@+id/btn_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_nine"
        android:layout_below="@+id/edit_text_display"
        android:layout_toRightOf="@+id/btn_eight"
        android:layout_margin="2dp"
        android:background="@drawable/background_values"
        />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_add"
        android:layout_below="@id/edit_text_display"
        android:layout_toRightOf="@+id/btn_nine"
        android:layout_margin="2dp"
        android:background="@drawable/background_operand"

        />

    <Button
        android:id="@+id/btn_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_four"
        android:layout_below="@+id/btn_seven"
        android:layout_margin="2dp"
        android:background="@drawable/background_values"
        />

    <Button
        android:id="@+id/btn_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_five"
        android:layout_toRightOf="@+id/btn_four"
        android:layout_below="@id/btn_eight"
        android:layout_margin="2dp"
        android:background="@drawable/background_values"
        />
    <Button
        android:id="@+id/btn_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_six"
        android:layout_below="@id/btn_nine"
        android:layout_toRightOf="@id/btn_five"
        android:layout_margin="2dp"
        android:background="@drawable/background_values"
        />
    <Button
        android:id="@+id/btn_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_minus"
        android:layout_below="@+id/btn_seven"
        android:layout_toRightOf="@id/btn_six"
        android:layout_margin="2dp"
        android:background="@drawable/background_operand"
        />

    <Button
        android:id="@+id/btn_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_one"
        android:layout_below="@+id/btn_four"
        android:layout_margin="2dp"
        android:background="@drawable/background_values"
        />

    <Button
        android:id="@+id/btn_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_two"
        android:layout_below="@id/btn_four"
        android:layout_toRightOf="@+id/btn_one"
        android:layout_margin="2dp"
        android:background="@drawable/background_values"
        />

    <Button
        android:id="@+id/btn_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_three"
        android:layout_below="@id/btn_four"
        android:layout_toRightOf="@id/btn_two"
        android:layout_margin="2dp"
        android:background="@drawable/background_values"
        />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_divide"
        android:layout_below="@id/btn_four"
        android:layout_toRightOf="@+id/btn_three"
        android:layout_margin="2dp"
        android:background="@drawable/background_operand"
        />

    <Button
        android:id="@+id/btn_zero"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_zero"
        android:layout_below="@+id/btn_one"
        android:layout_margin="2dp"
        android:background="@drawable/background_values"
        />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_clear"
        android:layout_below="@id/btn_one"
        android:layout_toRightOf="@+id/btn_zero"
        android:layout_margin="2dp"
        android:background="@drawable/background_operand"
        />

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_multiply"
        android:layout_below="@id/btn_one"
        android:layout_toRightOf="@id/btn_clear"
        android:layout_margin="2dp"
        android:background="@drawable/background_operand"
        />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_equals"
        android:layout_below="@id/btn_zero"
        android:layout_margin="2dp"
        android:background="@drawable/background_operand"
        />
    <EditText
        android:id="@+id/invisible_main_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"
        android:text="0"
        />
</RelativeLayout>
